feat: markActivityAsCompleted function  with SCORM implementation

--- a/demo/index.html
+++ b/demo/index.html
@@ -122,6 +122,10 @@
 <img alt="Logotipo de la Administración Nacional de Educación Pública." aria-label="Logotipo de la Administración Nacional de Educación Pública." class="h-8" data-id="img-0-2" src="images/0_img-0-2.png"/>
 <img alt="Logotipo del Consejo de Educación Inicial y Primaria (CEIP)." aria-label="Logotipo del Consejo de Educación Inicial y Primaria (CEIP)." class="h-8" data-id="img-0-3" src="images/0_img-0-3.png"/>
 </div> -->
+
+    <!-- Incluye primero la biblioteca de SCORM -->
+    <script src="pipwerks-scorm-api-wrapper.js"></script>
+    <!-- Luego tu script -->
     <script src="assets/base.js"></script>
 </body>
 
